# ascee

./: .gitignore  AppLoader.cpp  AppLoader.h  CMakeLists.txt  Heap.cpp  Heap.h  HeapModifier.cpp  HeapModifier.h  README.md  app.c  app1.c  app1.cpp  app2.c  app2.cpp  arg.cpp  argcrtl.h  argctypes.h  invoker.cpp  main.cpp
.github/workflows/: cmake.yml  codeql-analysis.yml  msvc-analysis.yml
.github/workflows/pbc/: install.sh
apps/: app1.cpp  app2.cpp
docs/: specs.md
include/arg/: id.h  info.h  primitives.h
include/argc/: classes.h  functions.h  primitives.h  runtime.h  types.h
include/core/: info.h  primitives.h  tries.hpp
param/: g.rand
src/: BlockValidator.cpp  BlockValidator.h  Executor.cpp  Executor.h  ThreadCpuTimer.cpp  ThreadCpuTimer.h  main.cpp  signer.cpp
src/argc/runtime/: auth.cpp  float.cpp  heapAccess.cpp  invoke.cpp  session.h  string.cpp
src/argcrt/: invoker.cpp  string.cpp
src/ascee/: CMakeLists.txt  config.h.in
src/ascee/argc/: README.md  StringBuffer.cpp  StringBuffer.h  functions.h  types.h
src/ascee/argc/functions/: auth.cpp  float.cpp  heapAccess.cpp  invoke.cpp  string.cpp
src/ascee/executor/: AppTable.cpp  AppTable.h  Executor.cpp  Executor.h  FailureManager.cpp  FailureManager.h  ThreadCpuTimer.cpp  ThreadCpuTimer.h  VirtualSigManager.cpp  VirtualSigManager.h  VirtualSignatureManager.cpp  VirtualSignatureManager.h
src/ascee/heap/: Chunk.cpp  Chunk.h  HeapModifier.cpp  HeapModifier.h  README.md  RestrictedModifier.cpp  RestrictedModifier.h  id.cpp  id.h
src/ascee/loader/: AppLoader.cpp  AppLoader.h
src/crypt/: README.md
src/crypto/: CryptoSystem.cpp  CryptoSystem.h  DigestCalculator.cpp  DigestCalculator.h  Keys.h
src/executor/: CollisionMap.cpp  CollisionMap.h  Executor.cpp  Executor.h  FailureManager.cpp  FailureManager.h  RequestScheduler.cpp  RequestScheduler.h  Scheduler.cpp  Scheduler.h  ThreadCpuTimer.cpp  ThreadCpuTimer.h
src/heap/: Cache.cpp  Cache.h  Chunk.cpp  Chunk.h  ChunkIndex.cpp  ChunkIndex.h  Heap.cpp  Heap.h  HeapModifier.cpp  HeapModifier.h  IdentifierTrie.cpp  IdentifierTrie.h  Modifier.cpp  Modifier.h  Page.cpp  Page.h  PageCache.cpp  PageCache.h  Pointer.cpp  README.md
src/loader/: AppLoader.cpp  AppLoader.h  BlockLoader.cpp  BlockLoader.h  PageLoader.cpp  PageLoader.h
src/storage/: AppIndex.cpp  AppIndex.h  AppLoader.cpp  AppLoader.h  CMakeLists.txt  ChunkIndex.cpp  ChunkIndex.h  Page.cpp  Page.h  PageCache.cpp  PageCache.h  PageLoader.cpp  PageLoader.h  README.md
src/util/: BlockingQueue.cpp  BlockingQueue.h  BlockingQueue.hpp  CMakeLists.txt  FixedOrderedMap.hpp  IdentifierTrie.cpp  IdentifierTrie.h  OrderedStaticMap.hpp  PrefixTrie.hpp  StaticArray.h  StaticArray.hpp  StringBuffer.cpp  StringBuffer.h  VirtualSigManager.cpp  VirtualSigManager.h  base64url.cpp  encoding.h
src/util/crypto/: CryptoSystem.cpp  CryptoSystem.h  DigestCalculator.cpp  DigestCalculator.h  Keys.h  README.md
src/validator/: BlockLoader.h  BlockValidator.cpp  BlockValidator.h  CMakeLists.txt  RequestProcessor.hpp  RequestScheduler.cpp  RequestScheduler.h
tests/: ArgcFloatDeathTest.cpp  ArgcFloatTest.cpp  ArgcStringDeathTest.cpp  ArgcStringTest.cpp  AsceeCryptoTest.cpp  AsceeExecutorTest.cpp  AsceeHeapDeathTest.cpp  AsceeHeapTest.cpp  AsceeIdentifiersTest.cpp  AsceeVSigManagerTest.cpp  CMakeLists.txt  HeapChunkTest.cpp  HeapModifierDeathTest.cpp  HeapModifierTest.cpp  MockModifier_test.h  RequestSchedulerTest.cpp  SchedulerTest.cpp  UtilBase64urlTest.cpp  googleTest.cpp  stringTest.cpp  subtest.h
tests/appFiles/single-thread/call/: app11.cpp  app15.cpp  app16.cpp
tests/appFiles/single-thread/circular/: app17.cpp  app18.cpp
tests/appFiles/single-thread/failed-call/: app10.cpp  app19.cpp  app20.cpp  app21.cpp
tests/appFiles/single-thread/reentrancy/: app22.cpp  app23.cpp
tests/appFiles/single-thread/stack-overflow/: app13.cpp  app14.cpp
tests/appFiles/single-thread/timeout/: app10.cpp  app12.cpp
tests/appfiles/single-thread/call/: app11.c  app11.cpp  app15.c  app15.cpp  app16.c  app16.cpp
tests/appfiles/single-thread/circular/: app17.c  app17.cpp  app18.c  app18.cpp
tests/appfiles/single-thread/failed-call/: app19.c  app19.cpp  app20.c  app20.cpp  app21.c  app21.cpp
tests/appfiles/single-thread/reentrancy/: app22.c  app22.cpp  app23.c  app23.cpp
tests/appfiles/single-thread/stack-overflow/: app13.c  app13.cpp  app14.c  app14.cpp
tests/appfiles/single-thread/timeout/: app10.c  app10.cpp  app12.c  app12.cpp
tests/apps/: ArgAppTest.cpp
tests/ascee/: ArgcFloatTest.cpp  ArgcStringTest.cpp  AsceeExecutorTest.cpp  AsceeVSigManagerTest.cpp  HeapChunkTest.cpp  HeapModifierDeathTest.cpp
tests/mock/heap/: MockModifier_test.h
tests/storage/: AsaPageTest.cpp
tests/testdata/single-thread/call/: app0x10.argc  app0x10.cpp  app0xb.argc  app0xb.cpp  app0xf.argc
tests/testdata/single-thread/circular/: app0x11.argc  app0x11.cpp  app0x12.argc  app0x12.cpp
tests/testdata/single-thread/failed-call/: app0x13.argc  app0x14.argc  app0x15.argc  app0x15.cpp  app0xa.argc
tests/testdata/single-thread/reentrancy/: app0x16.argc  app0x16.cpp  app0x17.argc
tests/testdata/single-thread/stack-overflow/: app0xd.argc  app0xd.cpp  app0xe.argc
tests/testdata/single-thread/timeout/: app0xc.argc
tests/util/: OrderedStaticMapTest.cpp  PrefixTrieTest.cpp  UtilBase64urlTest.cpp  UtilCryptoTest.cpp
tests/validator/: RequestProcessorTest.cpp  RequestSchedulerTest.cpp
